--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
         </nav>
         <h1>Projetos</h1>
         <h1>Seja Bem-Vindo à página inicial !!</h1>
+        
 
 
+    </div>
+    <div>
+        <p id="msg1"></p>
+        <img id="image"/>
     </div>
 <footer>
     @2023-Todos os direitos reservados.
